# eliott-math

./: .gitignore  CMakeLists.txt  EngineMaster.md
include/math/: Rect.hpp  Transform.hpp  Vector2.hpp  math.hpp
tests/: test_math.cpp
